--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,9 @@
+<div class="container">
+  <h1>Edit task</h1>
 <%= simple_form_for @task do |f| %>
   <%= f.input :title %>
   <%= f.input :details %>
+  <%= f.input :completed %>
   <%= f.button :submit %>
 <% end %>
+</div>
