--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,10 +1,14 @@
+<div class="container" >
 <ul>
   <% @tasks.each do |task| %>
     <li><%= task.title %></li>
     <li><%= task.details %></li>
     <li><%= task.completed%></li>
     <li><%= link_to "show task", task_path(task)  %>
-    <li><%= link_to "Delete", task_path(task), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></li>
+<li>
+  <%= link_to "Delete", task_path(task), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+</li>
   <% end %>
   <li><%= link_to "create new task", new_task_path %></li>
 </ul>
+</div>
