--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,7 @@
+<div class="container">
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
 <p><%= @task.completed %></p>
 <p><%= link_to "back to all tasks", tasks_path %></p>
 <p><%= link_to "edit task", edit_task_path(@task) %></p>
+</div>
